16:53 공지사항 및 FAQ 페이지 상단 네비와 공지 작성중

--- a/templates/main/NoticeFaq.html
+++ b/templates/main/NoticeFaq.html
@@ -3,7 +3,129 @@
     <head>
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <title>Document</title>
+        <title>공지사항 및 자주 묻는 질문</title>
+        <link rel="stylesheet" href="../../static/css/main/NoticeFaq.css" />
+        <link
+            rel="shortcut icon"
+            href="https://jumpit.saramin.co.kr/favicon.ico"
+            type="image/x-icon"
+        />
     </head>
-    <body></body>
+    <body class="light">
+        <div id="_next">
+            <div class="css0">
+                <div>
+                    <div class="notionApp">
+                        <div class="notionAppInner">
+                            <div class="notionFrame">
+                                <!-- 상단 네비 -->
+                                <div class="upperNav">
+                                    <div class="navigationWrapper">
+                                        <div class="notionTopbar">
+                                            <div class="topIcon">
+                                                <a href="" class="iconWrapper"></a>
+                                                    <img
+                                                        src="https://oopy.lazyrockets.com/api/rest/cdn/image/f6190c63-320b-4330-ab75-9d17d85239e3.png"
+                                                        class="iconHome"
+                                                    />
+                                                </a>
+                                            </div>
+                                            <div class="navMenus">
+                                                <div class="navMenu">
+                                                    <div>
+                                                        <a href="" class="navText">템프 홈으로</a>         
+                                                    </div>
+                                                </div>
+                                                <div class="navMenu">
+                                                    <div>
+                                                        <a href="" class="navText">공지사항</a>         
+                                                    </div>
+                                                </div>
+                                                <div class="navMenu">
+                                                    <div>
+                                                        <a href="" class="navText">자주 묻는 질문</a>         
+                                                    </div>
+                                                </div>
+                                            </div>
+                                            <div class="navRightSide">
+                                                <div class="searchButton" role="button">
+                                                    <i class="searchIcon xi-search"></i>
+                                                </div>
+                                                <div class="styleMenu">
+                                                    <div role="button" class="menuButton">
+                                                        <i class="xi-ellipsis-h menuIcon"></i>
+                                                    </div>
+                                                </div>
+                                            </div>
+                                        </div>
+                                        <div class="navUnderLine"></div>
+                                    </div>
+                                </div>
+                                <!-- // 상단 네비 -->
+                                <div class="notionScroller">
+                                    <div class="sectionUpper">
+                                        <img class="pageCover" src="https://oopy.lazyrockets.com/api/v2/notion/image?src=https%3A%2F%2Fs3-us-west-2.amazonaws.com%2Fsecure.notion-static.com%2F4f379f48-61d3-4d93-a132-e8825a055280%2F%EA%B3%B5%EC%A7%80.png&blockId=8ef18954-8f62-4767-9445-9b5805a4ae6d&width=3600" >
+                                        <div class="width padding">
+                                            <div class="pageIcon">
+                                                <div>
+                                                    <div class="imgIconWrap">
+                                                        <span role="img">📢</span>
+                                                    </div>
+                                                </div>
+                                            </div>
+                                            <div class="notionPageControls"></div>
+                                            <div id="noticeTitle" class="notionPageBlock">
+                                                <h1 class="pageTitle">공지사항</h1>
+                                            </div>
+                                        </div>
+                                    </div>
+                                    <main class="sectionMain">
+                                        <div class="notionPageBlock">
+                                            <a href="">
+                                                
+                                            </a>
+                                        </div>
+                                    </main>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <!-- 위로 가기 버튼 -->
+                    <div class="goToTopButtonWrapper">
+                        <div style="position: relative">
+                            <div
+                                class="topButton goToTopButtonContainer"
+                                style="right: 0px; bottom: 16px; opacity: 1"
+                            >
+                                <svg
+                                    version="1.1"
+                                    width="12"
+                                    height="12"
+                                    x="0"
+                                    y="0"
+                                    viewBox="0 0 292.362 292.362"
+                                    fill="currentColor"
+                                >
+                                    <g
+                                        transform="matrix(-1,1.2246467991473532e-16,-1.2246467991473532e-16,-1,292.36199951171875,292.3629837036133)"
+                                    >
+                                        <g xmlns="http://www.w3.org/2000/svg">
+                                            <path
+                                                d="M286.935,69.377c-3.614-3.617-7.898-5.424-12.848-5.424H18.274c-4.952,0-9.233,1.807-12.85,5.424 C1.807,72.998,0,77.279,0,82.228c0,4.948,1.807,9.229,5.424,12.847l127.907,127.907c3.621,3.617,7.902,5.428,12.85,5.428 s9.233-1.811,12.847-5.428L286.935,95.074c3.613-3.617,5.427-7.898,5.427-12.847C292.362,77.279,290.548,72.998,286.935,69.377z"
+                                                fill="currentColor"
+                                                data-original="#000000"
+                                            ></path>
+                                        </g>
+                                    </g>
+                                </svg>
+                                TOP
+                            </div>
+                        </div>
+                    </div>
+                    <!-- // 위로 가기 버튼 -->
+                </div>
+            </div>
+        </div>
+    </body>
+    <script src="../../static/js/main/NoticeFaq.js"></script>
 </html>
