--- a/templates/main/companyDetail.html
+++ b/templates/main/companyDetail.html
@@ -252,7 +252,31 @@
                                                     fill-rule="evenodd"
                                                     d="M16.736 3.5c1.396 0 2.735.574 3.722 1.597A5.55 5.55 0 0 1 22 8.951a5.55 5.55 0 0 1-1.542 3.855l-1.014 1.05-6.011 6.173a2 2 0 0 1-2.866 0l-6.011-6.173-1.014-1.05c-2.056-2.129-2.056-5.58 0-7.709a5.132 5.132 0 0 1 7.07-.352c.128.11.253.227.373.352L12 6.147l1.014-1.05c.126-.13.258-.254.395-.37l.016-.013a5.152 5.152 0 0 1 3.31-1.214Z"
                                                     clip-rule="evenodd"
-                                                ></path></svg></span
+                                                ></path>
+                                            </svg>
+                                            <!-- 좋아요 눌렀을 때 버튼변경 -->
+                                            <!-- <svg
+                                                xmlns="http://www.w3.org/2000/svg"
+                                                width="24"
+                                                height="24"
+                                                fill="none"
+                                                viewBox="0 0 24 24"
+                                                aria-hidden="true"
+                                            >
+                                                <path
+                                                    fill="#222"
+                                                    fill-rule="evenodd"
+                                                    d="m14.453 6.486-1.015 1.05a2 2 0 0 1-2.877 0l-1.014-1.05a3.137 3.137 0 0 0-4.567 0c-1.307 1.354-1.307 3.577 0 4.93l1.012 1.047L12 18.633l6.005-6.166.006-.006 1.008-1.045A3.55 3.55 0 0 0 20 8.951a3.55 3.55 0 0 0-.98-2.464 3.175 3.175 0 0 0-2.284-.987c-.843 0-1.666.346-2.283.986Zm4.99 7.37-6.01 6.173a2 2 0 0 1-2.866 0l-6.011-6.173-1.014-1.05c-2.056-2.129-2.056-5.58 0-7.709a5.132 5.132 0 0 1 7.049-.37c.136.115.268.239.395.37L12 6.147l1.014-1.05A5.152 5.152 0 0 1 16.736 3.5c1.396 0 2.735.574 3.722 1.597A5.55 5.55 0 0 1 22 8.951a5.55 5.55 0 0 1-1.542 3.855l-1.014 1.05Z"
+                                                    clip-rule="evenodd"
+                                                ></path>
+                                                <path
+                                                    fill="#00DD6D"
+                                                    fill-rule="evenodd"
+                                                    d="M16.736 3.5c1.396 0 2.735.574 3.722 1.597A5.55 5.55 0 0 1 22 8.951a5.55 5.55 0 0 1-1.542 3.855l-1.014 1.05-6.011 6.173a2 2 0 0 1-2.866 0l-6.011-6.173-1.014-1.05c-2.056-2.129-2.056-5.58 0-7.709a5.132 5.132 0 0 1 7.07-.352c.128.11.253.227.373.352L12 6.147l1.014-1.05c.126-.13.258-.254.395-.37l.016-.013a5.152 5.152 0 0 1 3.31-1.214Z"
+                                                    clip-rule="evenodd"
+                                                ></path>
+                                            </svg> -->
+                                            <!-- // 좋아요 눌렀을 때 버튼변경 --> </span
                                         ><span class="blind"
                                             >기업 좋아요</span
                                         ></span
