--- a/templates/resume/resume-edit.html
+++ b/templates/resume/resume-edit.html
@@ -1629,8 +1629,8 @@
                                                 </svg><span class="blind">이력서 완성 조건
                                                     툴팁</span>
                                                 <div class="bottom-tooltip layer" id="resumne-tip" role="tooltip">
-                                                    <div class="sc-d4ab682f-1 eMoGEQ"><span>💡 포지션에 지원 가능한 이력서를
-                                                            완성하려면</span><button class="sc-d4ab682f-2 iOYfLN"><svg
+                                                    <div class="bottom-tooltip-text1"><span>💡 포지션에 지원 가능한 이력서를
+                                                            완성하려면</span><button class="bottom-tooltip-text1-btn"><svg
                                                                 xmlns="http://www.w3.org/2000/svg" width="24"
                                                                 height="24" fill="none" viewBox="0 0 24 24"
                                                                 aria-hidden="true">
@@ -1638,16 +1638,16 @@
                                                                     d="m12.072 13.485 7.07 7.071 1.415-1.414-7.071-7.071 7.07-7.07-1.414-1.415-7.07 7.07L5 3.587 3.586 5l7.071 7.071-7.071 7.071L5 20.557l7.072-7.072Z"
                                                                     clip-rule="evenodd"></path>
                                                             </svg></button></div>
-                                                    <div class="sc-d4ab682f-3 bExiQq">
+                                                    <div class="bottom-tooltip-text2">
                                                         <p>아래 항목을 꼭 입력해주세요!</p>
                                                     </div>
-                                                    <div class="sc-d4ab682f-4 jhojay">
+                                                    <div class="bottom-tooltip-text3">
                                                         <p><strong><em style="color:#ff4e63">*</em> 필수:</strong> 기본정보,
                                                             기술스택, 학력</p>
                                                         <p><strong><em style="color:#888">*</em> 선택:</strong> 경력 or
                                                             프로젝트의 필수항목<em style="color:#ff4e63">*</em> 입력</p>
                                                     </div>
-                                                    <div class="sc-d4ab682f-7 bcWSqm"><svg
+                                                    <div class="bottom-tooltip-text4"><svg
                                                             xmlns="http://www.w3.org/2000/svg" width="24" height="24"
                                                             fill="none" viewBox="0 0 24 24">
                                                             <path fill="#C4C4C4" fill-rule="evenodd"
