--- a/static/css/admin/report_modal.css
+++ b/static/css/admin/report_modal.css
@@ -67,6 +67,12 @@
     padding: 20px;
 }
 
+.modal-body h4 {
+    font-size: 16px;
+    font-weight: 600;
+    /* margin-bottom: 12px; */
+}
+
 .info-row {
     display: flex;
     margin-bottom: 12px;
@@ -82,11 +88,12 @@
 }
 
 .detail-content {
-    margin: 12px 0;
-    padding: 12px;
+    margin: 8px 0;
+    padding: 20px;
     background: #f8f9fa; /* 연한 회색 배경 */
     border-radius: 4px;
     min-height: 100px;
+    color: #495057;
 }
 
 /* 
@@ -117,6 +124,10 @@
     - 수직 리사이즈 가능
     - 최소 높이 설정
  */
+.admin-memo {
+    margin-top: 8px;
+}
+
 #admin-memo {
     width: 100%;
     min-height: 100px;
